fixed the overflow-x in mobile resolution

--- a/website/style.css
+++ b/website/style.css
@@ -868,20 +868,46 @@ color:silver;
     .nav-links{
         width: 50%;        
     }
-    body{
-        overflow-x: hidden;
-        }
+    html, body {
+        overflow-x:hidden 
+      } 
 }
 
-@media screen and (max-width:580px){
-    body{
-    overflow-x: hidden;
-    }
+/* MOBILE RESOLUTION */
+@media screen and (max-width:768px){
+    html, body {
+        overflow-x:hidden 
+      } 
 
-    nav{
+    nav{    
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.changeLang{
+    right: 19%;
+}
+
+.selectedLang{
+    right: 13%;
+}
+
+.nav-title h1{
+    left: -25%;
+    display: flex;
+    position: relative;
+}
+
+.burger{    
+    right: 2%;
+    position: absolute;
+    display:block;       
+}
+
+.darkbutton{
+    left: 1%;
+    
 }
 
     .nav-links{
@@ -890,7 +916,7 @@ color:silver;
         display: flex;
         right: 0px;
         height: 92vh;
-        top: 10.7vh;        
+        top: 100%;        
         background-color: rgb(65, 65, 65);
         align-items: center;
         width: 60%;
@@ -900,10 +926,7 @@ color:silver;
     .nav-links li{
         opacity: 0%;
     }
-    .burger{    
-        margin-left: 0%;
-        display:block;       
-    }
+   
 }
 /* reveal the nav bar at the right side*/
 .nav-active{
